kubernetes/main/platform/observability/app/gatus/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gatus
  annotations:
    external-dns.alpha.kubernetes.io/hostname: "status.dcunha.io"
    gatus.home-operations.com/endpoint: |-
      interval: 30s
      conditions:
        - "[STATUS] == 200"
        - "[CERTIFICATE_EXPIRATION] > 72h"
spec:
  parentRefs:
    - name: external-gateway
      namespace: default # <--- CRITICAL: Gateway is in 'default' namespace
  hostnames:
    - "status.dcunha.io"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: gatus # Name of the Kubernetes Service
          port: 8080 # Port of the Kubernetes Service
